--- a/api_documentation.yml
+++ b/api_documentation.yml
@@ -24,7 +24,6 @@ paths:
                   item:
                     title: Get a single user
                     href: /api/users/1/
-
               - id: 2
                 username: jules
                 email_address: jules.fte@hotmail.com
@@ -149,18 +148,35 @@ paths:
           content:
             application/json:
               example:
-              - id: 1
-                title: Leon, the professional
-                director: Luc Besson
-                length: 6600
-                release_date: 1999-09-14
-                category_id: 2
-              - id: 2
-                title: Apocalypse now
-                director: Francis Copola
-                length: 8820
-                release_date: 1979-05-19
-                category_id: 3
+                '@namespaces':
+                  moviereviewmeta:
+                    name: /moviereviewmeta/link-relations/
+                '@controls':
+                  self:
+                    title: Get a list of all users
+                    href: api/users/
+                  moviereviewmeta:add-user:
+                    method": POST
+                    encoding": json
+                    title": Create a new user
+                    href: /api/users/
+                items:
+                  - id: 1
+                    username: mario456
+                    email_address: mario.lo@oulu.fi
+                    role: Basic User
+                    '@controls':
+                      item:
+                        title: Get a single user
+                        href: /api/users/1/
+                  - id: 2
+                    username: jules
+                    email_address: jules.fte@hotmail.com
+                    role: Admin
+                    '@controls':
+                      item:
+                        title: Get a single user
+                        href: /api/users/2/
     post:
       tags:
       - "Movies"
@@ -398,7 +414,6 @@ paths:
           description: Successfully returned all categories from the database.
           content:
             application/json:
-              schema:
               example:
               - id: 1
                 title: Science-Fiction
